assets/style.css
/* ... */
.sea_bottom .basket {
	display: block;
	width: 16.8vh;
	height: 0;
	position: absolute;
	top: -5px;
	right: 13.7vh;
	padding: 0;
	margin: 0;
	border: none;
	outline: none;
	background: transparent;
	overflow: hidden;
	-webkit-transform: translateY(-23.9vh);
	    -ms-transform: translateY(-23.9vh);
	        transform: translateY(-23.9vh);
	-webkit-transition: -webkit-transform .3s ease-in-out;
	transition: -webkit-transform .3s ease-in-out;
	-o-transition: transform .3s ease-in-out;
	transition: transform .3s ease-in-out;
	transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
}
.sea_bottom .basket.active {
	height: 23.9vh;
	-webkit-transform: translateY(0);
	    -ms-transform: translateY(0);
	        transform: translateY(0);
}
.popup {
	position: fixed;
	overflow: hidden;
	z-index: 2000;
top: 0;
bottom: 0;
}
.popup_inner {
	background: #FFFFFF;
	min-width: 560px;
	min-height: 100%;
	width: 100%;
	height: -webkit-max-content;
	height: -moz-max-content;
	height: max-content;
    padding: 44px 48px 48px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
}
.popup_inner .tsb-cont {
	min-height: 100%;
}
.popup_back {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	background: transparent;
	padding: 0;
	margin: 0 0 4vh;
	border: none;
	font-size: 14px;
	line-height: 16px;
	letter-spacing: 0.16em;
	text-transform: uppercase;
}
.popup_back img {
	height: 20px;
	margin-right: 25px;
	width: auto;
}
.popup_title {
	font-weight: normal;
	font-size: 48px;
	line-height: 56px;
	margin: 0 0 4vh;
}
.popup_subtitle {
	font-weight: normal;
	font-size: 16px;
	line-height: 19px;
	margin: 0 0 4vh;
}
.popup_form {
	margin: auto 0;
	width: 100%;
}
.popup_input {
	width: 100%;
	display: block;
	margin: 0 0 3.2vh;
}
.popup_input input {
	outline: none;
	display: block;
	width: 100%;
	background: transparent;
	border: 1px solid #263C43;
	-webkit-box-sizing: border-box;
	        box-sizing: border-box;
	border-radius: 4px;
	padding: 21px 32px 19px;
	letter-spacing: 0.08em;
	text-transform: uppercase;
	font-size: 12px;
	line-height: 15px;
}
.popup_input-group {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	position: relative;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	margin: 0 0 3.2vh;
	height: 58px;
}
.popup_confirm {
	padding: 20px 20px 19px;
	background: #DA7A4F;
	border-radius: 4px;
	display: block;
	width: 100%;
	text-align: center;
	letter-spacing: 0.08em;
	text-transform: uppercase;
	font-weight: bold;
	font-size: 14px;
	line-height: 18px;
	color: white;
	border: none;
	margin: 4vh 0 0;
}
.popup_checkbox {
	position: relative;
}
.popup_checkbox label {
	position: relative;
	padding: 0 0 0 42px;
	font-weight: bold;
	font-size: 12px;
	line-height: 15px;
	display: block;
	cursor: pointer;
}
.popup_checkbox label:before {
	content: '';
	display: block;
	width: 18px;
	height: 18px;
	border: 2px solid #C4C4C4;
	-webkit-box-sizing: border-box;
	        box-sizing: border-box;
	border-radius: 2px;
	position: absolute;
	top: 0;
	left: 0;
}
.popup_checkbox label:after {
	content: '';
	display: block;
	width: 12px;
	height: 12px;
	background: #C4C4C4;
	-webkit-box-sizing: border-box;
	        box-sizing: border-box;
	border-radius: 2px;
	position: absolute;
	top: 3px;
	left: 3px;
	opacity: 0;
}
.popup_checkbox input:checked + label:after {
	opacity: 1;
}
.popup_radio {
	position: relative;
	width: 50%;
}
.popup_radio label {
	position: relative;
	padding: 0 0 0 46px;
	font-weight: bold;
	font-size: 14px;
	line-height: 18px;
	letter-spacing: 0.08em;
	display: block;
	cursor: pointer;
}
.popup_radio label:before {
	content: '';
	display: block;
	width: 22px;
	height: 22px;
	border: 2px solid #C4C4C4;
	-webkit-box-sizing: border-box;
	        box-sizing: border-box;
	border-radius: 50%;
	position: absolute;
	top: 50%;
	left: 0;
	-webkit-transform: translateY(-50%);
	    -ms-transform: translateY(-50%);
	        transform: translateY(-50%);
}
.popup_radio label:after {
	content: '';
	display: block;
	width: 12px;
	height: 12px;
	background: #C4C4C4;
	-webkit-box-sizing: border-box;
	        box-sizing: border-box;
	border-radius: 50%;
	position: absolute;
	top: 50%;
	left: 5px;
	opacity: 0;
	-webkit-transform: translateY(-50%);
	    -ms-transform: translateY(-50%);
	        transform: translateY(-50%);
}
.popup_radio input:checked + label:after {
	opacity: 1;
}
.popup_total-sum {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: justify;
	    -ms-flex-pack: justify;
	        justify-content: space-between;
	-webkit-box-align: baseline;
	    -ms-flex-align: baseline;
	        align-items: baseline;
	margin: 0 0 1.6vh;
}
.total_title {
	font-size: 32px;
	line-height: 37px;
}
.total_sum {
	font-size: 32px;
	line-height: 41px;	
	font-weight: bold;
}



#contact {
	width: 0;
	height: 100%;
	top: 0;
	left: 0;
	-webkit-transition: width .4s ease-in-out;
	-o-transition: width .4s ease-in-out;
	transition: width .4s ease-in-out;
}
#contact.show {
	width: 100%;
}
#contact .popup_inner {
	height: 100%;
}
.product-card {
	width: 100%;
	height: 0;
	top: 0;
	left: 0;
	-webkit-transition: height .4s ease-in-out;
	-o-transition: height .4s ease-in-out;
	transition: height .4s ease-in-out;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	padding: 20px;
	-webkit-transform: translateY(-200%);
	    -ms-transform: translateY(-200%);
	        transform: translateY(-200%);
}
.product-card.show {
	height: 100%;
	-webkit-transform: translateY(0);
	    -ms-transform: translateY(0);
	        transform: translateY(0);
}
/* ... */

